--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,25 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'pl.jarekslaby.pkmechpower'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 11
+targetCompatibility = 11
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/com.pi4j/pi4j-core
+    compile group: 'com.pi4j', name: 'pi4j-core', version: '1.2'
+    // https://mvnrepository.com/artifact/com.pi4j/pi4j-gpio-extension
+    compile group: 'com.pi4j', name: 'pi4j-gpio-extension', version: '1.2'
+    // https://mvnrepository.com/artifact/com.pi4j/pi4j-device
+    compile group: 'com.pi4j', name: 'pi4j-device', version: '1.2'
     // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.2'
     // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
@@ -24,6 +32,12 @@ dependencies {
     testCompile group: 'org.testng', name: 'testng', version: '6.14.3'
     // https://mvnrepository.com/artifact/org.mockito/mockito-core
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
+    // https://mvnrepository.com/artifact/org.powermock/powermock-module-testng
+    testCompile group: 'org.powermock', name: 'powermock-module-testng', version: '2.0.2'
+    // https://mvnrepository.com/artifact/org.powermock/powermock-api-mockito2
+    testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.2'
+    // https://mvnrepository.com/artifact/org.powermock/powermock-core
+    testCompile group: 'org.powermock', name: 'powermock-core', version: '2.0.2'
 }
 
 test {
@@ -38,6 +52,11 @@ jar {
     manifest {
         attributes 'Main-Class': 'pl.edu.pk.mech.Main'
     }
+
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 
 jar.dependsOn.add("test")
+mainClassName = 'pl.edu.pk.mech.Main'
